--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -82,5 +86,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
