--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=SCM
+
+#port configuration
+server.port=1234
+
+#Database configuration
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/smart_contact_manager
+spring.datasource.username=root
+spring.datasource.password=1412
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##for creating schemas and table
+spring.jpa.hibernate.ddl-auto=update
+
+#JPA query config to show
+spring.jpa.show-sql=true
