--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 #JPA query config to show
 spring.jpa.show-sql=true
+
+
+spring.security.user.name=suhag123
+spring.security.user.password=suhag123
