--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.jpa.show-sql=true
 
 # spring.security.user.name=suhag123
 # spring.security.user.password=suhag123
+
+
+#SWAGGER SETUP
+springdoc.swagger-ui.path=/api-docs
+# springdoc.swagger-ui.operationsSorter=method
