--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,10 @@ spring.jpa.show-sql=true
 #SWAGGER SETUP
 springdoc.swagger-ui.path=/api-docs
 # springdoc.swagger-ui.operationsSorter=method
+
+
+# Enable HTTPS
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=JKS
+server.ssl.key-alias=suhag
